--- a/app/src/main/res/layout/activity_game_org_gamelist.xml
+++ b/app/src/main/res/layout/activity_game_org_gamelist.xml
@@ -6,134 +6,203 @@
     android:layout_height="match_parent"
     tools:context=".game_org_gamelist">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="116dp"
+        android:clickable="true"
+        app:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_add" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="346dp"
+        android:layout_height="129dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="272dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/cod_mw_name"
+            android:layout_width="140dp"
+            android:layout_height="27dp"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/mobile_legends"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/edit_btn_t1"
+            android:layout_width="76dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="50dp"
+            android:backgroundTint="@color/grey"
+            android:text="EDIT"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tournament_name_31" />
+
+        <Button
+            android:id="@+id/delete_btn_t1"
+            android:layout_width="76dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="250dp"
+            android:layout_marginTop="50dp"
+            android:backgroundTint="@color/grey"
+            android:text="DELETE"
+            android:textSize="10sp"
+            app:layout_constraintStart_toEndOf="@+id/edit_btn_t1"
+            app:layout_constraintTop_toBottomOf="@+id/tournament_name_31" />
+
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="127dp"
+            android:layout_height="162dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="-18dp"
+            app:srcCompat="@drawable/moblielegends" />
+
+    </androidx.cardview.widget.CardView>
+
     <TextView
         android:id="@+id/ID_tournament"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="44dp"
         android:text="@string/org_games"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="45dp"
+        tools:layout_editor_absoluteY="28dp" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="43dp"
+        android:layout_marginStart="44dp"
         android:text="@string/add_games"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ID_tournament" />
+        tools:layout_editor_absoluteY="109dp" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="64dp"
         android:text="@string/add_a_game"
-        app:layout_constraintStart_toEndOf="@+id/imageButton"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="58dp"
-        android:text="@string/cod_mv"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+        tools:layout_editor_absoluteX="208dp"
+        tools:layout_editor_absoluteY="89dp" />
 
     <TextView
         android:id="@+id/match_org_list_h_round1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginStart="144dp"
         android:text="@string/mobile_legends"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_btn_t1" />
+        tools:layout_editor_absoluteY="776dp" />
 
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="19dp"
-        android:text="@string/valorant_name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/delete_btn_t1" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="346dp"
+        android:layout_height="129dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="420dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <Button
-        android:id="@+id/edit_btn_t1"
-        android:layout_width="92dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="21dp"
-        android:text="@string/org_Edit"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        <TextView
+            android:id="@+id/cod_mw_name"
+            android:layout_width="89dp"
+            android:layout_height="27dp"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/game_name_cod_mw"
+            android:textSize="16sp" />
 
-    <Button
-        android:id="@+id/delete_btn_t1"
-        android:layout_width="92dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="15dp"
-        android:text="@string/org_Edit1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        <Button
+            android:id="@+id/edit_btn_t1"
+            android:layout_width="76dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="50dp"
+            android:backgroundTint="@color/grey"
+            android:text="EDIT"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tournament_name_31" />
 
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="92dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="10dp"
-        android:text="Edit"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        <Button
+            android:id="@+id/delete_btn_t1"
+            android:layout_width="76dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="250dp"
+            android:layout_marginTop="50dp"
+            android:backgroundTint="@color/grey"
+            android:text="DELETE"
+            android:textSize="10sp"
+            app:layout_constraintStart_toEndOf="@+id/edit_btn_t1"
+            app:layout_constraintTop_toBottomOf="@+id/tournament_name_31" />
 
-    <Button
-        android:id="@+id/Btn_cancel"
-        android:layout_width="92dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="112dp"
-        android:text="@string/org_Delete"
-        app:layout_constraintStart_toEndOf="@+id/edit_btn_t1"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="127dp"
+            android:layout_height="162dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="-18dp"
+            app:srcCompat="@drawable/cod" />
 
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="92dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="55dp"
-        android:text="Delete"
-        app:layout_constraintStart_toEndOf="@+id/delete_btn_t1"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+    </androidx.cardview.widget.CardView>
 
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="92dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="49dp"
-        android:text="Delete"
-        app:layout_constraintStart_toEndOf="@+id/button7"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="346dp"
+        android:layout_height="129dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="112dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="51dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="54dp"
-        android:src="@android:drawable/ic_menu_add"
-        app:layout_constraintStart_toEndOf="@+id/ID_tournament"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/cod_mw_name"
+            android:layout_width="89dp"
+            android:layout_height="27dp"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/valorant_name"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/edit_btn_t1"
+            android:layout_width="76dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="50dp"
+            android:backgroundTint="@color/grey"
+            android:text="EDIT"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tournament_name_31" />
+
+        <Button
+            android:id="@+id/delete_btn_t1"
+            android:layout_width="76dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="250dp"
+            android:layout_marginTop="50dp"
+            android:backgroundTint="@color/grey"
+            android:text="DELETE"
+            android:textSize="10sp"
+            app:layout_constraintStart_toEndOf="@+id/edit_btn_t1"
+            app:layout_constraintTop_toBottomOf="@+id/tournament_name_31" />
+
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="127dp"
+            android:layout_height="162dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="-18dp"
+            app:srcCompat="@drawable/valo" />
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
