--- a/app/src/main/res/layout/activity_game_update.xml
+++ b/app/src/main/res/layout/activity_game_update.xml
@@ -55,8 +55,8 @@
 
     <EditText
         android:id="@+id/descript_key"
-        android:layout_width="227dp"
-        android:layout_height="38dp"
+        android:layout_width="225dp"
+        android:layout_height="45dp"
         android:layout_marginStart="66dp"
         android:layout_marginTop="12dp"
         android:ems="10"
@@ -77,10 +77,10 @@
 
     <EditText
         android:id="@+id/min_tm_key"
-        android:layout_width="230dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="65dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="232dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:hint="Min Teams"
         android:inputType="textPersonName"
@@ -99,10 +99,10 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName5"
-        android:layout_width="236dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="66dp"
-        android:layout_marginTop="13dp"
+        android:layout_width="232dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Max Teams"
         android:inputType="textPersonName"
@@ -143,8 +143,9 @@
         android:id="@+id/update_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="66dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="56dp"
+        android:backgroundTint="@color/grey"
         android:text="@string/user_Update"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
@@ -153,8 +154,9 @@
         android:id="@+id/cancle_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="56dp"
+        android:backgroundTint="@color/grey"
         android:text="@string/user_Cancle"
         app:layout_constraintStart_toEndOf="@+id/update_button"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
