--- a/app/src/main/res/layout/activity_tournament_user_selected_t.xml
+++ b/app/src/main/res/layout/activity_tournament_user_selected_t.xml
@@ -138,18 +138,18 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
-<Button
-    android:id="@+id/button7"
-    android:layout_width="135dp"
-    android:layout_height="48dp"
-    android:layout_marginBottom="76dp"
-    android:backgroundTint="@color/grey"
-    android:text="REGISTER NOW"
-    android:textSize="12sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.488"
-    app:layout_constraintStart_toStartOf="parent" />
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="135dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="76dp"
+        android:backgroundTint="@color/grey"
+        android:text="@string/register_now"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView15"
